<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_qr">

    <fragment
        android:id="@+id/navigation_add_recipient"
        android:name="com.ngengeapps.easymomo.AddRecipientFragment"
        android:label="@string/add_recipient"
        tools:layout="@layout/fragment_add_recipient" >
        <action
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/mobile_navigation"
            android:id="@+id/action_navigation_add_recipient_to_navigation_my_qr"
            app:destination="@id/navigation_my_qr" />
    </fragment>
    <fragment
        android:id="@+id/navigation_transfer"
        android:name="com.ngengeapps.easymomo.TransferFragment"
        android:label="@string/send_money"
        tools:layout="@layout/fragment_transfer"
        >
        <argument
            android:name="account"
            app:argType="com.ngengeapps.easymomo.models.TrimmedAccount" />
    </fragment>
    <fragment
        android:id="@+id/navigation_my_qr"
        android:name="com.ngengeapps.easymomo.MyQRCodeFragment"
        android:label="@string/receive_money"
        tools:layout="@layout/fragment_my_q_r_code" />
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.ngengeapps.easymomo.ScanFragment"
        android:label="Scan To Send"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_navigation_scan_to_navigation_transfer"
            app:destination="@id/navigation_transfer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_receivers"
        android:name="com.ngengeapps.easymomo.RecipientsListFragment"
        android:label="@string/recipients"

        tools:layout="@layout/fragment_recipients_list" >
        <action
            app:popUpTo="@id/navigation_my_qr"
            app:popUpToInclusive="true"
            android:id="@+id/action_navigation_receivers_to_navigation_add_recipient"
            app:destination="@id/navigation_add_recipient" />
        <action
            android:id="@+id/action_navigation_receivers_to_navigation_transfer"
            app:destination="@id/navigation_transfer" />
    </fragment>
</navigation>