<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.ngengeapps.easymomo.viewmodels.AccountListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TransferFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/send_money"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/HeaderStyle"
            android:text="@string/transfer_to"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewmodel.selectedAccount.name}"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="Ngenge Senior" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderStyle"
            android:layout_marginTop="32dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="671842463"
            android:text="@{viewmodel.selectedAccount.number}"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/black"
            android:alpha="0.7"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="1dp"
            android:layout_marginTop="32dp"
            android:hint="@string/amount_to_be_sent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSend"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:text="@string/send"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>